--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "private": true,
     "version": "0.2.0",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.1",
-        "mongodb": "^4.5.0",
-        "mustache": "^4.2.0",
-        "nodemon": "^2.0.15"
+        "mongodb": "^4.5.0"
     },
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "node app.js"
     }
 }
